src/test/ui/issues/issue-37550.stderr
error[E0658]: let bindings in constant functions are unstable (see issue #48821)
  --> $DIR/issue-37550.rs:14:13
   |
LL |     let t = true;
   |             ^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constant functions are unstable (see issue #48821)
  --> $DIR/issue-37550.rs:14:13
   |
LL |     let t = true;
   |             ^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: let bindings in constant functions are unstable (see issue #48821)
  --> $DIR/issue-37550.rs:17:13
   |
LL |     let x = || t;
   |             ^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constant functions are unstable (see issue #48821)
  --> $DIR/issue-37550.rs:17:13
   |
LL |     let x = || t;
   |             ^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
